--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ionic-plugin-keyboard",
     "cordova-sqlite-storage",
     "cordova-plugin-geolocation",
-    "cordova-plugin-email-composer"
+    "cordova-plugin-email-composer",
+    "cordova-plugin-file"
   ],
   "cordovaPlatforms": []
 }
