Email and phone numbers now link to actual unbc public contacts. Email has premade message that includes app name,version,date,and android version. Global object automatically loads and saves to the filesystem on app launch and on app minimize/close. Several new packages have been installed in package.json.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "cordova-sqlite-storage",
     "cordova-plugin-geolocation",
     "cordova-plugin-email-composer",
-    "cordova-plugin-file"
+    "cordova-plugin-file",
+    {
+      "locator": "https://github.com/rodrigo-martinezd/cordova-dialog-gps.git",
+      "id": "cordova-dialog-gps"
+    },
+    "cordova-plugin-app-version"
   ],
   "cordovaPlatforms": []
 }
