--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,18 @@
 {
   "name": "HelloIonic",
+  "ignore": [
+    "node_modules",
+    "www/libs"
+  ],
   "private": "true",
+  "dependencies": {
+    "angular": "~1.5.7",
+    "angular-material": "~1.0.9"
+  },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
+  },
+  "resolutions": {
+    "angular": "~1.5.7"
   }
 }
