--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "GetLost: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
+    "sam":"121"
     "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
@@ -13,6 +14,7 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
+
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
