--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GetLost: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "sam":"121"
+    "sam":"1231",
     "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
