--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,12 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.1"
+    "ionic": "driftyco/ionic-bower#1.3.1",
+    "platform.js": "platform#^1.3.1"
+  },
+  "dependencies": {
+    "ti-segmented-control": "^0.0.2",
+    "ionic-filter-bar": "^1.1.1",
+    "angular-material": "^1.0.9"
   }
 }
