--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "angular": "~1.5.7",
     "angular-material": "~1.0.9",
-    "cartodb.js": "^3.15.9"
+    "cartodb.js": "^3.15.9",
+    "ngCordova": "^0.1.27-alpha",
+    "angularfire": "^2.0.1"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
