--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "angular": "~1.5.7",
     "angular-material": "~1.0.9",
-    "cartodb.js": "^3.15.9"
+    "cartodb.js": "^3.15.9",
+    "ol3": "https://github.com/openlayers/ol3.git#3.17.1"
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
