--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   ],
   "private": "true",
   "dependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.1"
+    "ionic": "driftyco/ionic-bower#1.3.1",
     "angular": "~1.5.7",
     "angular-material": "~1.0.9",
     "cartodb.js": "^3.15.9",
